--- a/upload-server/internal/ui/components/newuploadbtn.html
+++ b/upload-server/internal/ui/components/newuploadbtn.html
@@ -1,12 +1,5 @@
 {{define "newuploadbtn"}}
-  {{if .HideBtn}}
-    <div>
-    </div>
-  {{else}}
-    <a href="/" class="link-button">
-      <div class="link-button-container">
-          Upload New File
-      </div>
-    </a>
-  {{end}}
+<a href="/" class="link-button">
+  <div class="link-button-container">Upload New File</div>
+</a>
 {{end}}
