--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/form.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/progress.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/file-info.css" />
-    <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
+    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/progress.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/upload.css" />
     <title>DEX Upload</title>
   </head>
   <body>
     {{template "navbar" .Navbar}}
     <main id="main">
       <div class="upload-container">
-        <div class="alert alert-warining hidden" id="support-alert">
+        <div class="alert alert-warning hidden" id="support-alert">
           <b>Warning!</b> Your browser does not seem to support the features
           necessary to run tus-js-client. The buttons below may work but
           probably will fail silently.
@@ -24,8 +23,8 @@
         <h1 class="resume-upload">Resume Upload</h1>
 
         <div class="form-container">
-          <div class="input-group new-upload">
-            <label for="endpoint"> Upload endpoint: </label>
+          <div class="input-container new-upload">
+            <label for="endpoint">Upload endpoint</label>
             <input
               type="text"
               id="endpoint"
@@ -36,21 +35,23 @@
             <!-- https://tusd.tusdemo.net/files/ -->
             <!-- https://apidev.cdc.gov/upload -->
           </div>
-          <div class="input-group new-upload">
-            <label for="chunksize"> Chunk size (bytes): </label>
+          <div class="input-container new-upload">
+            <label for="chunksize">
+              Chunk size (bytes)
+              <div class="input-tip">
+                <b>Note:</b> Chunksize should be set on the client for uploading
+                files of large size (1GB or over).
+              </div>
+            </label>
             <input
               type="number"
               id="chunksize"
               name="chunksize"
               value="40000000"
             />
-            <p>
-              <b>Note:</b> Chunksize should be set on the client for uploading
-              files of large size (1GB or over).
-            </p>
           </div>
-          <div class="input-group new-upload">
-            <label for="paralleluploads"> Parallel upload requests: </label>
+          <div class="input-container new-upload">
+            <label for="paralleluploads">Parallel upload requests</label>
             <input
               type="number"
               id="paralleluploads"
@@ -59,9 +60,12 @@
               disabled
             />
           </div>
-          <div class="input-group">
+          <div class="input-container">
             <label>
-              Metadata JSON object (file name will be inferred from each file):
+              Metadata JSON object
+              <div class="input-tip">
+                <b>Note:</b> File name will be inferred from each file
+              </div>
               <div class="file-container">
                 <button onclick="files.click()">Browse Files</button>
                 <input type="file" id="files" />
@@ -70,66 +74,67 @@
           </div>
         </div>
 
-        <div class="span8 progress-container">
+        <div class="progress-container">
           <div class="progress progress-striped progress-success hidden">
             <div class="bar hidden" style="width: 0%"></div>
           </div>
         </div>
-        <hr />
       </div>
+
       <div class="file-info-container">
-        <div id="file-info-header">
-          <div class="file-id" id="file-id">
+        <div class="file-header-container">
+          <div class="file-id-container">
             <h1>{{.Info.Manifest.received_filename}}</h1>
-            <strong>ID: {{.Info.Manifest.upload_id}}</strong>
+            ID: {{.Info.Manifest.upload_id}}
           </div>
 
-          <div class="file-info" id="upload-status">
+          <div class="upload-status-container">
             <h1>
-              <span class="status-label">Upload Status: </span>
-              <span class="status-value upload-{{AllLowerCase .Info.UploadStatus.Status}}" id="upload-status-value">
+              Upload Status:
+              <span id="upload-status-value" class="upload-{{AllLowerCase .Info.UploadStatus.Status}}">
                 {{.Info.UploadStatus.Status}}
               </span>
             </h1>
-            <div class="small-italics">
-                <span class="status-time-label" id="upload-status-label"> Uploaded At: </span>
-                <span class="status-time-value" id="upload-datetime-value">
-                  {{FormatDateTime .Info.UploadStatus.LastChunkReceived}}
-                </span>
+            <div class="small-italics info-datetime">
+              Uploaded At:
+              <span id="upload-datetime-value">
+                {{FormatDateTime .Info.UploadStatus.LastChunkReceived}}
+              </span>
             </div>
           </div>
         </div>
 
         {{if .Info.Deliveries}}
-        <div class="file-info" id="file-deliveries">
+        <div class="file-deliveries-container">
           <h2>Delivery Status</h2>
           {{range .Info.Deliveries}}
-          <div class="file-delivery file-delivery-{{AllLowerCase .Status}}">
-            <div id="delivery-header">
-              <h3>{{AllUpperCase .Name}}</h3>
-              <div id="delivery-status">
+          <div class="file-delivery-container file-delivery-{{AllLowerCase .Status}}">
+            <div class="delivery-header-container">
+              <div class="delivery-id-container">
+                <h2>{{AllUpperCase .Name}}</h2>
+              </div>
+              <div class="delivery-status-container">
                 <h3>
-                  <span class="status-label">Delivery Status:</span>
-                  <span class="status-value delivery-{{AllLowerCase .Status}}">{{.Status}}</span>
+                  Delivery Status:
+                  <span class="delivery-{{AllLowerCase .Status}}">{{.Status}}</span>
                 </h3>
                 <div class="small-italics">
-                  <span class="status-time-label"> Delivered At:</span>
+                  Delivered At:
                   <span class="status-time-value">{{FormatDateTime .DeliveredAt}}</span>
                 </div>
               </div>
             </div>
 
-            <div class="info-item" id="location-info">
-              <div class="location-label">Delivered to:</div>
-              <div class="lcoation-value">{{.Location}}</div>
+            <div class="delivery-location-container">
+              Location: {{.Location}}
             </div>
           
             {{if .Issues}}
-            <div class="file-info delivery-issues">
-              <h3>Issues</h3>
-              <div class="issue-list">
+            <div class="delivery-issues-container">
+              <h2>Issues</h2>
+              <div class="issue-list-container">
               {{range .Issues}}
-                <div class="issue-item">
+                <div class="issue-container">
                   <div class="issue-level issue-level-{{AllLowerCase .Level}}">{{.Level}}:</div>
                   <div class="issue-message">{{.Message}}</div>
                 </div>
@@ -142,43 +147,40 @@
         </div>
         {{end}}
 
-        <div class="file-info" id="file-details">
+        <div class="file-details-container">
           <h2>Upload Details</h2>
-          <div class="info-item">
-            <div class="item-name">File Size:</div>
-            <div class="item-value">{{.Info.FileInfo.size_bytes}} bytes</div>
+          <div class="info-container">
+            <div class="info-label">File Size:</div>
+            <div class="info-value">{{.Info.FileInfo.size_bytes}} bytes</div>
           </div>
-          <div class="info-item">
-            <div class="item-name">Sender ID:</div>
-            <div class="item-value">{{AllUpperCase .Info.Manifest.sender_id}}</div>
+          <div class="info-container">
+            <div class="info-label">Sender ID:</div>
+            <div class="info-value">{{AllUpperCase .Info.Manifest.sender_id}}</div>
           </div>
-          <div class="info-item">
-            <div class="item-name">Producer ID:</div>
-            <div class="item-value">{{AllUpperCase .Info.Manifest.data_producer_id}}</div>
+          <div class="info-container">
+            <div class="info-label">Producer ID:</div>
+            <div class="info-value">{{AllUpperCase .Info.Manifest.data_producer_id}}</div>
           </div>
-          <div class="info-item">
-            <div class="item-name">Stream ID:</div>
-            <div class="item-value">{{AllUpperCase .Info.Manifest.data_stream_id}}</div>
+          <div class="info-container">
+            <div class="info-label">Stream ID:</div>
+            <div class="info-value">{{AllUpperCase .Info.Manifest.data_stream_id}}</div>
           </div>
-          <div class="info-item">
-            <div class="item-name">Stream Route:</div>
-            <div class="item-value">{{AllUpperCase .Info.Manifest.data_stream_route}}</div>
+          <div class="info-container">
+            <div class="info-label">Stream Route:</div>
+            <div class="info-value">{{AllUpperCase .Info.Manifest.data_stream_route}}</div>
           </div>
-          <div class="info-item">
-            <div class="item-name">Jurisdiction:</div>
-            <div class="item-value">{{AllUpperCase .Info.Manifest.jurisdiction}}</div>
+          <div class="info-container">
+            <div class="info-label">Jurisdiction:</div>
+            <div class="info-value">{{AllUpperCase .Info.Manifest.jurisdiction}}</div>
           </div>
         </div>
 
-        {{template "newuploadbtn" .Newuploadbtn}}
-      </div>
+        {{template "newuploadbtn" .NewUploadBtn}}
     </main>
   </body>
 
   <script>
     const uploadUrl = "{{.UploadUrl}}";
-  </script>
-  <script>
     const uploadStatusLevel = "{{.UploadStatusLevel}}";
   </script>
   <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
