--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -74,9 +74,15 @@
           </div>
         </div>
 
-        <div class="span8 progress-container">
-          <div class="progress progress-striped progress-success hidden">
-            <div class="bar hidden" style="width: 0%"></div>
+        <div class="uploader-container">
+          <div class="progress-container">
+            <div class="progress progress-striped progress-success hidden">
+              <div class="bar hidden" style="width: 0%"></div>
+            </div>
+          </div>
+          <div class="pause-resume-upload-container">
+            <button id="pause-upload-button" class="hidden">Pause</button>
+            <button id="resume-upload-button" class="hidden">Resume</button>
           </div>
         </div>
       </div>
