--- a/upload-server/internal/ui/assets/index.css
+++ b/upload-server/internal/ui/assets/index.css
@@ -68,6 +68,19 @@ a.skip-main:active {
   z-index: 999;
 }
 
+button {
+  background: var(--upload-accent);
+  border: none;
+  border-radius: 5px;
+  color: var(--upload-light-text);
+  cursor: pointer;
+  display: inline-block;
+  margin: 5px 0;
+  font-size: 16px;
+  padding: 10px;
+  width: 100%;
+}
+
 .hidden {
   display: none;
 }
@@ -146,19 +159,6 @@ a:visited {
 .form-container {
   margin: 0;
   max-width: 550px;
-}
-
-.form-container button {
-  background: var(--upload-accent);
-  border: none;
-  border-radius: 5px;
-  color: var(--upload-light-text);
-  cursor: pointer;
-  display: inline-block;
-  margin: 5px 0;
-  font-size: 16px;
-  padding: 10px;
-  width: 100%;
 }
 
 .form-container .submit-button {
