--- a/upload-server/internal/ui/assets/upload.css
+++ b/upload-server/internal/ui/assets/upload.css
@@ -145,3 +145,8 @@
 .detail-container .detail-value {
   word-break: break-all;
 }
+
+.file-size-initiated,
+.file-size-in-progress {
+  display: none;
+}
